--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
           <a href="#" target="_blank">Veja meus dashboards</a>
         </li>
         <li>
-          <a href="#" target="_blank">Conheça meu portfólio</a>
+          <a href="https://github.com/ocaionakamura" target="_blank"
+            >Conheça meu Github</a
+          >
         </li>
         <li>
-          <a href="#" target="_blank">Perfil na Rocketseat</a>
+          <a
+            href="https://app.rocketseat.com.br/me/caioyukishigue"
+            target="_blank"
+            >Perfil na Rocketseat</a
+          >
         </li>
       </ul>
       <div id="social-links">
